--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ colorama==0.4.4
 cycler==0.10.0
 decorator==4.4.2
 kiwisolver==1.3.1
-matplotlib>=3.3.3
+llvmlite==0.34.0
+matplotlib==3.3.3
 networkx==2.5
+numba==0.51.2
 numpy==1.19.4
 Pillow==8.0.1
 pretty-errors==1.2.18
 pyparsing==2.4.7
 python-dateutil==2.8.1
+scipy==1.5.4
 six==1.15.0
 tqdm==4.53.0
