--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ numba==0.51.2
 numpy==1.19.4
 Pillow==8.0.1
 pretty-errors==1.2.18
+PyDSTool==0.91.0
 pyparsing==2.4.7
 python-dateutil==2.8.1
 scipy==1.5.4
